Fix for bug 691785.

The bitmap mask clip device has a long standing bug when attempting to clip
a bitmap through a 1bpp bitmap (gxclipm.c, clip_runs_enumerate, line 283ish).

The code detects runs of 'on' pixels in the mask. It then keeps the last run
it found in a 1 place buffer (called 'previous'). This therefore represents
the previous run found. Whenever we find a new run, we check to see if we can
add it to the previous run to try to form a larger (vertical) rectangle. If
we can't, we should write the previous rectangle out and remember the current
one.

Unfortunately the code was writing the current rectangle out, rather than the
previous one. This has the effect of losing the first run on most lines out.

130 differences shown in cluster testing; confirmed in bmpcmp as
progressions.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11918 a1074d23-0009-0410-80fe-cf8c14f379e6